--- a/report.j2
+++ b/report.j2
@@ -1,41 +1,41 @@
 MMMMMMMMMMMMMMMMMWMMMWMMMMWNKkoc;'...........';:ox0XWMMMWWMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMWWWMWX0xo:,'..                 ...,:lxOKWMMWMMWMMMMMMMMMMMMMMM
-MMMMMMMMMMMMMMMMMWN0d:'...       ...                  ..':oONWMMMMMMMMMMMMMMMMM
-MMMMMMMMMMMMMMMNOo,.             ..    .              .    .,lkNMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMWN0d:'...                            ..':oONWMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMNOo,.                                       .,lkNMMMMMMMMMMMMMMM
 MMMMMMMMWMMMWXd;.                                             .,oKWWWMMMMMMMMMM
 MMMMMMMMMWWKo.                                                   .cONWMMMMMMMMM
 MMMMMMMMWKl. .                                                     .c0WMMMMMMMM
-MMMMMMMNd.                       .    ....   .                     . .lKMMMMMMM
-WWMMMW0;.     .                     .:kO0Oo.                          .,kNMWMMM
-WWMMNx'                             :KMMMMWx.                       .   .oXWMMM
+MMMMMMMNd.                            ....                           .lKMMMMMMM
+WWMMMW0;.                           .:kO0Oo.                          .,kNMWMMM
+WWMMNx'                             :KMMMMWx.                           .oXWMMM
 MMWNd.                             ;0WMMMMMNo.                           .cXMMW
-MMNo.                             'OWMWMMMMMXc.                         . .cXMM
-MWd.   .                       . .xWMMNX0KWMMK;                         .  .oNM
-MO'                             .dNWMWk:':XWWW0, .                          .xW
-Xc                             .lNMMM0,  .oNWWWk. ..                         ;K
-k.                             :XMMMK:    .dWWMWx.    ..                     .d
-c    .                       .,0MWWNl.   . .kWWMNo.                           ;
-,    ..                      'OWMMNd.  ..   ,0WWMXc .  .                      .
-. .                       . .xWWMM0,      .  :KMMMK;.                         .
-. .                      . .oNMMMMNOl.       .lNMMM0,                          
-.   .                     .lNWMWWWWMWXxl:.  . .dWMMWk'                       ..
+MMNo.                             'OWMWMMMMMXc.                           .cXMM
+MWd.                             .xWMMNX0KWMMK;                            .oNM
+MO'                             .dNWMWk:':XWWW0,                            .xW
+Xc                             .lNMMM0,  .oNWWWk.                            ;K
+k.                             :XMMMK:    .dWWMWx.                           .d
+c                            .,0MWWNl.     .kWWMNo.                           ;
+,                            'OWMMNd.       ,0WWMXc                           .
+.                           .xWWMM0,         :KMMMK;.                         .
+.                          .oNMMMMNOl.       .lNMMM0,                         . 
+.                         .lNWMWWWWMWXxl:.    .dWMMWk'                        .
 .                        .:KWMMXockXWWWWNOl'.  .xWWWWd.                       .
 ,                        ;KMMMWd. .,dKWWWWWXx:. 'OWWWNo.                      .
-l                       'OWMMWk.  .  .cokNWMMW0o,:0MMMXc.                     ;
-k.                .    .xWMMW0,         .,dKWMMWXk0WWWWK:                    .d
-Nc .                . .dNWWWK:            ..ckNMMWWMMWWM0,      .        ..  :K
-M0,  .          ..   .lXWWWNl  .        .    .;dKWMWWWMMWk.   ..         .  .kW
-MWx.             .   :KWWMWd.              .   ..ckNWMWWMWd.               .dNM
-WMNd.               ,0MWMWk.                      .;dKWMWWO' .  .         .lXMM
-MMMWx.             .;ooool,    .                    ..:dxo,. .           .oNMMW
-MMMWWk'  .       .          .                     .    ..            .  .xWWWMM
-MMWMMW0:.  .   .    .   .  ..                          .. .       .   .;OWMMWWM
-MMMMMMMNk,.                                                       .  'dXMMMMMMM
-MMMMMMMMMXd'       .                                               'lKWMMMMMMMM
-MMMMMMMMWMWXd,.                                           .     .'oKWWWWMMMMMMM
-MMMMMMMMMMWMMXx:..                                         .  .:xXMWWWWWMMMMMMM
-MMMMMMMMMMMMMMMWKx:..   .                                  .:d0NMMMMMMMMMMMMMMM
-MMMMMMMMMMMMMMMMMMWXkl;...                     .      ..;lxKNMMWMMMMMMMMMMMMMMM
+l                       'OWMMWk.     .cokNWMMW0o:0MMMXoc.                     ;
+k.                     .xWMMW0,         .,dKWMMWXk0WWWWKo:                   .d
+Nc                    .dNWWWK:            ..ckNMMWWMMWWM0o,                  :K
+M0,                  .lXWWWNl                .;dKWMWWWMMWkc.                .kW
+MWx.                .:KWWMWd.                  ..ckNWMWWMWxd.              .dNM
+WMNd.              .,0MWMWk.                      .;dKWMWWOco.            .lXMM
+MMMWx.            .;;ooool,                         ..:dxxxdc;.          .oNMMW
+MMMWWk'                                                                 .xWWWMM
+MMWMMW0:.                                                             .;OWMMWWM
+MMMMMMMNk,.                                                          'dXMMMMMMM
+MMMMMMMMMXd'                                                       'lKWMMMMMMMM
+MMMMMMMMWMWXd,.                                                 .'oKWWWWMMMMMMM
+MMMMMMMMMMWMMXx:..                                            .:xXMWWWWWMMMMMMM
+MMMMMMMMMMMMMMMWKx:..                                      .:d0NMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMWXkl;...                            ..;lxKNMMWMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMWNKOxl:,...               ...,:ldkKNWWMWWMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMWMMMMMMNX0OxxdollllllllodkO0KXWMMMMWWMMMMMMMMMMMMMMMMMMMMM
 
